--- a/.github/.workflows/build.yml
+++ b/.github/.workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 18
 
       - run: npm install  # if you have a package.json
-      - run: npx esbuild j.ts --minify --format=esm -o j.js
+      - run: npx esbuild j.ts --minify --format=esm --outfile=j.js
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
