--- a/.github/.workflows/build.yml
+++ b/.github/.workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 18
 
-      - run: npm install  # if you have a package.json
+      - run: npm install esbuild # if you have a package.json
       - run: npx esbuild j.ts --minify --format=esm --outfile=j.js
 
       - name: Upload artifact
