--- a/.github/.workflows/build.yml
+++ b/.github/.workflows/build.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,19 +20,18 @@ jobs:
         with:
           node-version: 18
 
-      - run: npm install esbuild # if you have a package.json
+      - run: npm install esbuild
+
       - run: npx esbuild j.ts --minify --format=esm --outfile=j.js
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .  # include index.html, j.js, etc.
+          path: .  # Include j.js, index.html, etc.
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
+
     steps:
       - uses: actions/deploy-pages@v4
